--- a/src/pug/sections/_enter.pug
+++ b/src/pug/sections/_enter.pug
@@ -3,6 +3,7 @@ section.enter(style="padding-top: 13px")
         video(autoplay muted loop preload poster="img/coverflow.png").enter__background
             source(src='video/digital_wave_background_01.webm' type="video/webm")
             source(src="video/Digital_Wave_Background_01.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"')
+            source(src="img/coverflow.png" type="image/png")
         h1 Цифровая среда РГСУ
-        p.enter__subtitle Единое информационное <br>и сервисное пространством университета
+        p.enter__subtitle Единое информационное <br> и сервисное пространством университета
         button(type="button").enter__button.btn.btn--transparent Войти в личный кабинет
