--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -15,7 +15,7 @@ footer.footer
                 li.footer__message-item.footer__message-item--mail
                     a(href="mailto:info@rgsu.net").footer__message-link.footer__message-link--mail Интернет приемная
                         svg(width="23" height="18")
-                            use(href="img/icons/icons.svg#email" fill="#FFF")
+                            use(href="img/icons/icons.svg#email")
                 li.footer__message-item
                     a(href="mailto:info@rgsu.net").footer__message-link.footer__message-link--telegram
                         img(src="img/telegram-light.svg" alt="Написать нам в Телеграм" width='36' height='36')
