--- a/src/pug/sections/_new-section.pug
+++ b/src/pug/sections/_new-section.pug
@@ -32,20 +32,21 @@ section.new-section
                     p В 2020-2021 учебном году, в соответствии с учебными планами, обучение по модулю «Технологии содействия профессиональному развитию (волонтерство)» пройдут 843 студента 1 курса РГСУ в рамках обучения по 38 образовательным программам.
             .new-section__other-news
                 h2.new-section__title.title--large Другие новости
-                .news__wrapper
-                    .news__item.swiper-slide
-                        .block.block--wide.block__content-news
-                            a(href="#").block__content
-                                p.news__item-date 1 сентября
-                                h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
-                                picture.news__picture
-                                    source(srcset="img/studyear.webp" type="image/webp")
-                                    img(src="img/studyear.png")
-                    .news__item
-                        .block.block--wide.block--attention.block__content-news
-                            a(href="new-layout.html").block__content.block__content--hot
-                                p.news__item-date.news__item-date--dark 28 августа
-                                h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
-                                picture.news__picture
-                                    source(srcset="img/studyspring.webp" type="image/webp")
-                                    img(src="img/studyspring.png")
+                .news__wrapper.swiper-container
+                    .swiper-wrapper
+                        .news__item.swiper-slide
+                            .block.block--wide.block__content-news
+                                a(href="#").block__content
+                                    p.news__item-date 1 сентября
+                                    h3.news__item-title Поздравление с Днем знаний и началом нового учебного года
+                                    picture.news__picture
+                                        source(srcset="img/studyear.webp" type="image/webp")
+                                        img(src="img/studyear.png")
+                        .news__item.swiper-slide
+                            .block.block--wide.block--attention.block__content-news
+                                a(href="new-layout.html").block__content.block__content--hot
+                                    p.news__item-date.news__item-date--dark 28 августа
+                                    h3.news__item-title Студенческая весна. приглашаем на еженедельные онлайн-встречи!
+                                    picture.news__picture
+                                        source(srcset="img/studyspring.webp" type="image/webp")
+                                        img(src="img/studyspring.png")
