--- a/src/pug/sections/_study-work.pug
+++ b/src/pug/sections/_study-work.pug
@@ -1,5 +1,5 @@
 mixin table
-    table.table-scroll
+    table.table-scroll.scrollbar-custom
         thead.table-scroll__header
             tr
                 th.table-scroll__title Наименование учебной дисциплины
