--- a/src/scss/blocks/_student-news.scss
+++ b/src/scss/blocks/_student-news.scss
@@ -1,28 +1,29 @@
 .student-news__content {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .student-news__header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 25px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
 }
 
 .student-news__counter {
-  font-size: 14px;
-  line-height: 16px;
-  color: $c-light;
-  background: $c-green;
-  border-radius: 4px;
-  padding: 4px 9px;
+    font-size: 14px;
+    line-height: 16px;
+    color: $c-light;
+    background: $c-green;
+    border-radius: 4px;
+    padding: 4px 9px;
 }
 
 .student-news__wrapper {
-  @media (min-width: $tablet) {
-	width: 1003px;
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-  }
+    @media (min-width: $tablet) {
+        max-width: 1003px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 }
