--- a/src/pug/sections/_science-work.pug
+++ b/src/pug/sections/_science-work.pug
@@ -1,5 +1,5 @@
 mixin table
-    table.table-scroll
+    table.table-scroll.scrollbar-custom
         thead
             tr
                 th.table-scroll__title Наименование учебной дисциплины
