--- a/src/scss/blocks/_finance.scss
+++ b/src/scss/blocks/_finance.scss
@@ -1,68 +1,76 @@
 .finance__content {
-  display: inline-flex;
-  gap: 35px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media (min-width: $tablet) {
+        flex-wrap: unset;
+    }
 }
 
+
 .finance__content-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  svg {
-    margin-top: 51px;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    svg {
+        margin-top: 51px;
+    }
 }
 
 .finance__content-history {
-  width: 485px;
-  height: 491px;
+    width: 100%;
+    @media (min-width: $tablet) {
+        margin-right: 30px;
+    }
 }
 
 .finance__content-description {
-  font-size: 22px;
-  line-height: 32px;
-  text-align: center;
-  color: #6E7781;
-  width: 299px;
-  margin: 16px 0 19px;
+    font-size: 22px;
+    line-height: 32px;
+    text-align: center;
+    color: #6e7781;
+    width: 299px;
+    margin: 16px 0 19px;
 }
 
 .finance__content-debt {
-  width: 485px;
+    width: 100%;
 }
 
 .finance__content-isDebt {
-  font-size: 22px;
-  line-height: 26px;
-  text-align: center;
-  color: $c-green;
-  margin: 0 0 30px;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    color: $c-green;
+    margin: 0 0 30px;
 }
 
 .finance__content-debt-buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 40px;
-  width: 100%;
-  padding: 0 38px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    width: 100%;
+    padding: 0 38px;
 }
 
 .finance__content-debt-button {
-  width: 189px;
-  padding: 8px 13px;
-  justify-content: center;
-  &--pay {
-    width: 157px;
-  }
+    width: 189px;
+    padding: 8px 13px;
+    justify-content: center;
+    &--pay {
+        width: 157px;
+    }
 }
 
 .finance__content-debt-links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 40px;
-  a {
-    font-size: 16px;
-    line-height: 24px;
-    color: #C3CAD6;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 40px;
+    a {
+        font-size: 16px;
+        line-height: 24px;
+        color: #c3cad6;
+    }
 }
