--- a/src/scss/blocks/_pagination.scss
+++ b/src/scss/blocks/_pagination.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .pagination__button {
@@ -79,6 +80,7 @@
 .pagination__list {
     @include list-reset;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .pagination__item {
