--- a/src/scss/blocks/_table.scss
+++ b/src/scss/blocks/_table.scss
@@ -71,6 +71,9 @@
     padding-top: 16px;
     padding-bottom: 20px;
     padding-left: 12px;
+    a {
+        color: $c-blue;
+    }
 }
 
 .table-scroll__title {
@@ -98,6 +101,7 @@
 .table-scroll__header {
     display: flex;
     align-items: center;
+    margin-top: 27px;
 }
 
 .table-scroll__cell--first-cell {
